--- a/languages/de-jkpublishpages.csv
+++ b/languages/de-jkpublishpages.csv
@@ -8,15 +8,15 @@ en,default,description,file,hash
 "The start and end dates are in the past. This does not make sense. Please remove both dates completely or add a start and/or end date in the future.","Das Anfangs- und das Enddatum liegen in der Vergangenheit. Das macht keinen Sinn. Bitte entfernen Sie beide Datumsangaben vollständig oder geben Sie ein Start- und/oder Enddatum in der Zukunft ein.",,site/modules/JkPublishPages/JkPublishPages.module,b9219b467b8e870757f6e5799510ab9c
 published,veröffentlicht,,site/modules/JkPublishPages/JkPublishPages.module,8f888fedf6bd5ff7c93c6d76bb8dc21c
 unpublished,unveröffentlicht,,site/modules/JkPublishPages/JkPublishPages.module,3ebd43fb0ca85e5d4aae6b6f19703a39
-"will be %s immediately during the next cron run","wird automatisch beim nächsten Cron-Durchlauf auf %s gesetzt",,site/modules/JkPublishPages/JkPublishPages.module,11a529087f835d3502cff35250865c7f
-"remains %s","bleibt %s",,site/modules/JkPublishPages/JkPublishPages.module,ba571db724754f1856575ea83af4780c
-"will be %s on %s","wird auf Status %s am %s geändert",,site/modules/JkPublishPages/JkPublishPages.module,8f0837dcd1982fc32c809a3dd4b88b08
+"will be ""%s"" immediately during the next cron run","wird automatisch beim nächsten Cron-Durchlauf auf ""%s"" geändert",,site/modules/JkPublishPages/JkPublishPages.module,0d3ef070eec189803a08d7532ad3f9d6
+"remains ""%s""","bleibt ""%s""",,site/modules/JkPublishPages/JkPublishPages.module,3a0c0ff456d74fd49579cdaf1c857ce9
+"will be ""%s"" on %s","wird auf Status ""%s"" am %s geändert",,site/modules/JkPublishPages/JkPublishPages.module,e2f895d855210165fda66b1017d382e5
 "publication start date","Start der Veröffentlichung",,site/modules/JkPublishPages/JkPublishPages.module,57d4b5e0be8b635fca3ffc9fd138c4b0
 "publication end date","Ende der Veröffentlichung",,site/modules/JkPublishPages/JkPublishPages.module,d099a18c64c32a40c5bb711a85ac0d61
 "in the past","in der Vergangenheit",,site/modules/JkPublishPages/JkPublishPages.module,73f20f046560b19d639bfcfecbeb08de
 "in the future","in der Zukunft",,site/modules/JkPublishPages/JkPublishPages.module,83b96b4f140d5349b16f1e64e0c053f0
-"This page is %s, but your %s is %s. This means that this page will be %s automatically on the next Cron run. Please check the value of your %s again to ensure that this is the desired behaviour.","Diese Seite ist %s, aber Ihr %s ist %s. Dies bedeutet, dass diese Seite beim nächsten Cron-Lauf automatisch auf den Status ""%s "" geändert werden. Bitte überprüfen Sie den Wert ""%s"" erneut, um sicherzustellen, dass dies das gewünschte Verhalten ist.",,site/modules/JkPublishPages/JkPublishPages.module,139538d1e79efe68c23a4a41075ff840
-"Page is currently %s.","Die Seite ist gegenwärtig %s.",,site/modules/JkPublishPages/JkPublishPages.module,8db5a18df520e1fc5559e102fd18113b
+"This page is %s, but your %s is %s. This means that this page will be ""%s"" automatically on the next Cron run. Please check the value of your %s again to ensure that this is the desired behaviour.","Diese Seite ist %s, aber Ihr %s ist %s. Dies bedeutet, dass diese Seite beim nächsten Cron-Lauf automatisch auf den Status ""%s "" geändert werden. Bitte überprüfen Sie den Wert %s erneut, um sicherzustellen, dass dies das gewünschte Verhalten ist.",,site/modules/JkPublishPages/JkPublishPages.module,0c9b79c9d9eb06fb77053ea682a02691
+"Page is currently %s.","Die Seite ist gegenwärt %s.",,site/modules/JkPublishPages/JkPublishPages.module,8db5a18df520e1fc5559e102fd18113b
 "Schedule plan: This page  %s","Veröffentlichungsplan: Diese Seite %s",,site/modules/JkPublishPages/JkPublishPages.module,cf4b640169cd77f589423e7eee91917d
 "Schedule plan: The status of the publication will remain unchanged in the future.","Veröffentlichungsplan: Der Stautus der Veröffentlichung bleibt in der Zukunft bestehen und wird sich nicht ändern.",,site/modules/JkPublishPages/JkPublishPages.module,edc5b9346513af17da328b088d53be49
 "Every 30 seconds","Alle 30 Sekunden",,site/modules/JkPublishPages/JkPublishPages.module,9f600621e6189e66c7b80aee8153741f
