--- a/languages/de-jkpublishpages.csv
+++ b/languages/de-jkpublishpages.csv
@@ -1,11 +1,9 @@
-en,default,description,file,hash
-"No action",Nichts,,site/modules/JkPublishPages/JkPublishPages.module,fa46ea6f6f6623fdd7039b5f1a8f3940
+en,de,description,file,hash
+"Unpublish the page","Die Veröffentlichung der Seite aufheben",,site/modules/JkPublishPages/JkPublishPages.module,82378f8ff7a2fd9a9604817d98d12067
 "Move page to trash","Seite in den Mülleimer verschieben",,site/modules/JkPublishPages/JkPublishPages.module,7abd7277f9a10193f5586acbe6eb428f
 "Move page as a child of another page","Verschiebe die Seite als Kind zu einer anderen Seite",,site/modules/JkPublishPages/JkPublishPages.module,0a799a1d0fa08efbe84aa4fc51ead413
 "Delete page permanently","Seite dauerhaft löschen",,site/modules/JkPublishPages/JkPublishPages.module,95ed993384ff8861b2c4493878dc041e
 "Un/check all","Alle markieren/leeren",,site/modules/JkPublishPages/JkPublishPages.module,d6dc9d4a5a6ad2541a3fd0372484f2e9
-"For safety reasons: The value of this field has already been cleared by this module to prevent accidental publishing by the cronjob on the next run.","Aus Sicherheitsgründen: Der Wert dieses Feldes wurde bereits von diesem Modul gelöscht, um eine versehentliche Veröffentlichung durch den Cronjob beim nächsten Lauf zu verhindern.",,site/modules/JkPublishPages/JkPublishPages.module,26efeabb7af9b8be752cc608ddb06359
-"Your previously entered value: %s.","Ihr zuvor eingegebener Wert: %s.",,site/modules/JkPublishPages/JkPublishPages.module,38815b69991649fb23c2473913f44d65
 "The publishing settings of this page do not allow you to manually publish this page now.","Die Veröffentlichungseinstellungen dieser Seite erlauben es Ihnen nicht, diese Seite jetzt manuell zu veröffentlichen.",,site/modules/JkPublishPages/JkPublishPages.module,c1b22cf38570f67f406795574b11b941
 "Otherwise, the page cannot be published immediately.","Andernfalls kann die Seite jetzt nicht veröffentlicht werden.",,site/modules/JkPublishPages/JkPublishPages.module,4bb01093eb22eeddb9e05467a996f028
 "The status of this page remains ""unpublished"" at the moment.","Der Status der Seite bleibt derzeit auf ""unveröffentlicht"".",,site/modules/JkPublishPages/JkPublishPages.module,158142b2971a3616ee5ee780c56c1f82
